Clean Some Code